@@ -1,0 +1,20 @@
+﻿block relocation for pre-shipment
+装船前预翻箱问题
+
+装船前预翻箱是指在集装箱船未到港口的情况下，对集装箱码头堆场集装箱堆存状态不符合发箱顺序的箱子进行预先翻动操作的过程，
+使得整理后的集装箱堆放顺序与发箱顺序一致，以尽可能地降低或者消除装船时翻箱操作的出现次数，从而达到提高装船时作业效率的目的。
+预翻箱作业发生在配载计划结束之后及装船之前的一段时间内，此时发箱顺序已基本明确，且基于船箱位特性允许有多组均可操作的发箱顺序。
+由于大多数集装箱码头通常在船舶到港前数小时就结束集港，且大部分集港的集装箱在结港前一段时间均已到港。
+因此，可以充分利用结港后至装船前的时间段，甚至可以在尚未结港但大部分集港箱已到港、多数计划贝位已经堆满的情况下，对已结束集港的贝位进行预翻箱整理操作。
+装船前预翻箱不同于装船时翻箱，在于装船前进行预翻箱操作时堆场贝位中的集装箱总数是不变的，而装船时翻箱操作时堆场贝位中的集装箱是不断移动到靠泊的船上的。
+
+本方法在保持贝内箱数不变的前提下，最小化从初始堆存状态到最终堆存状态所需要翻箱操作的总次数。
+
+特征1：预翻箱整理操作的完成状态是，先装船的集装箱均堆存在后装船的集装箱箱上方，不需要将某个集装箱的最终箱位固定到某具体位置上。
+特征2：堆存贝位为多排多层直接堆形式，贝位内只允许堆放相同尺寸的集装箱，即不考虑20尺和40尺集装箱混堆的情况。
+特征3：预翻箱开始时，贝中所有集装箱的初始堆放状态已知，各集装箱的装船顺序已被唯一确定。
+特征4：堆存贝位如果有k层堆存位，则贝位内至少留k-1个空箱位作为翻箱操作使用。
+
+原则1：贝内翻箱原则。即同一贝位的集装箱不翻往其他贝位，以减小移箱距离，降低作业成本。
+原则2：就近翻箱原则。即将集装箱翻往最近的可用排中的较矮排，以减小移箱距离，降低作业成本。
+原则3：层高均衡原则。靠近车道的排最多三层，排与排尽量层高一致，或梯形落差至多两层，以防安全风险。
