@@ -24,7 +24,7 @@
     </ShowAsCollectionAssociation>
   </Class>
   <Interface Name="Phenix.StorageAlgorithm.StackInventory.IGoods">
-    <Position X="5" Y="0.5" Width="1.5" />
+    <Position X="2.25" Y="3.25" Width="1.5" />
     <TypeIdentifier>
       <HashCode>AAACAACAAAAAAAAAAAAAAAAAACAAAgAEAAAAAAAAAAA=</HashCode>
       <FileName>StackInventory\IGoods.cs</FileName>
