@@ -1,5 +1,5 @@
 ﻿Choose Goods for Stack Inventory
-栈式库存的挑货方法
+栈式库存挑货问题
 
 采取重叠式堆码、堆垛工具为叉车的仓库，货位按“区排位”编排，比如编号A0101代表A区01排01位。一个货位上可以叠高1～4捆货物。
 一个排上连续一个方向上布置有多个货位，采取栈式存取货物，如要提取内侧货位货物前必须先将外侧货位货物搬走，一排上先进后出。
